   by querying each node for its session information, which is then saved as
   attribute 'session_info' on the cluster node object.  This information is
   also used in error messages, if available.  This validation has been done
   since version 1.5.0 but now it can be disabled.  The default of argument
   'validate' can be controlled via an R options and an environment variable.

BUG FIXES:

 * makeClusterPSOCK() would produce an error on 'one node produced an error:
   could not find function "getOptionOrEnvVar"' if 'parallelly' is not
   available on the node.

 * makeClusterPSOCK() would attempt to loaded 'parallelly' on the worker.
   If it's not available on the worker, it would result in a silent warning
   on the worker.  Now 'parallelly' is not loaded.

 * The error message on using an invalid 'rscript_envs' argument for
   makeClusterPSOCK() reported on the value of 'rscript_libs' (sic!).
 

Version: 1.20.0 [2020-10-10]

SIGNIFICANT CHANGES:

 * Add availableCores(), and availableWorkers(), supportsMulticore(),
   as.cluster(), autoStopCluster(), makeClusterMPI(), makeClusterPSOCK(),
   and makeNodePSOCK() from the 'future' package.

NEW FEATURES:

 * Add isConnectionValid() and connectionId() adopted from internal code
   of the 'future' package.
 
BUG FIXES:

 * Renamed environment variable 'R_FUTURE_MAKENODEPSOCK_tries' used by
   makeClusterPSOCK() to 'R_FUTURE_MAKENODEPSOCK_TRIES'.

 * connectionId() did not return -1L on Solaris for connections with internal
   'nil' pointers because they were reported as '0' - not 'nil' or '0x0'.

HISTORY:

 * Below is an excerpt of the future's NEWS entries that are related to the
   functions in this package.


Version: 1.19.0 [2020-09-19]

SIGNIFICANT CHANGES:

 * Now availableCores() better supports Slurm.  Specifically, if environment
   variable 'SLURM_CPUS_PER_TASK' is not set, which requires that option
   --slurm-cpus-per-task=n' is specified and SLURM_JOB_NUM_NODES=1, then it