@@ -16,6 +16,9 @@ NEW FEATURES:
    also used in error messages, if available.  This validation has been done
    since version 1.5.0 but now it can be disabled.  The default of argument
    'validate' can be controlled via an R options and an environment variable.
+   
+ * Now makeNodePSOCK(..., rscript_envs = "no-existing") produces an informative
+   warning on non-existing environment variables that was skipped.
 
 BUG FIXES:
 
@@ -30,6 +33,9 @@ BUG FIXES:
  * The error message on using an invalid 'rscript_envs' argument for
    makeClusterPSOCK() reported on the value of 'rscript_libs' (sic!).
  
+ * makeNodePSOCK(..., rscript_envs = "no-existing") would result in an error
+   when trying to launch the cluster node.
+
 
 Version: 1.20.0 [2020-10-10]
 
